syntax = "proto2";

package info.anodsplace.headunit.aap.protocol.proto;
option java_outer_classname = "MediaPlayback";

enum PlaybackMsgType {
    MSG_PLAYBACK_METADATA = 0x8001;
    MSG_PLAYBACK_STARTRESPONSE = 0x8002;
    MSG_PLAYBACK_METADATASTART = 0x8003;
}

message MediaPlaybackStatus
{
    enum State
    {
        MEDIA_SERVICE_STATE_PAUSE = 0;
        MEDIA_SERVICE_STATE_STOPPED = 1;
        MEDIA_SERVICE_STATE_PLAYING = 3;
    }

    optional State state = 1;
    optional string source = 2;
    optional uint32 seconds = 3;
    optional bool shuffle = 4;
    optional bool repeat = 5;
    optional bool repeat_one = 6;
}

message MediaMetaData
{
    optional string song = 1;
    optional string artist = 2;
    optional string album = 3;
    optional bytes albumart = 4;
    optional string playlist = 5;
    optional uint32 duration = 6;
    optional uint32 rating = 7;
}